# Whisper

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs  resampler.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/providers/: google_cloud.rs  local_whisper.rs  mod.rs  native_stt.rs  openai_whisper.rs
src-tauri/src/providers/constme_whisper/: download.rs  ffi.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: HotkeyDisplay.tsx
src/components/history/: HistoryList.tsx
src/components/recording/: RecordingIndicator.tsx
src/components/settings/: SettingsPanel.tsx
src/lib/: commands.ts  events.ts
src/stores/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
