[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
local-whisper = ["whisper-rs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
arboard = "3"
enigo = "0.3"
whisper-rs = { version = "0.13", optional = true }
libloading = "0.8"
tempfile = "3"
zip = "2"
futures-util = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Speech",
  "Win32_System_Com",
  "Win32_Foundation",
] }
